@@ -30,61 +30,73 @@ namespace CIAO
 
       static ::DDS::StatusMask get_mask (void);
 
-    virtual void
-    on_inconsistent_topic (
-      ::DDS::Topic_ptr,
-      const ::DDS::InconsistentTopicStatus & ) {}
-    virtual void
-    on_requested_deadline_missed (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::RequestedDeadlineMissedStatus & ) {}
-    virtual void
-    on_requested_incompatible_qos (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::RequestedIncompatibleQosStatus & ) {}
-    virtual void
-    on_sample_rejected (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::SampleRejectedStatus & ) {}
-    virtual void
-    on_liveliness_changed (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::LivelinessChangedStatus & ) {}
-    virtual void
-    on_data_available (
-      ::DDS::DataReader_ptr ) {}
-    virtual void
-    on_subscription_matched (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::SubscriptionMatchedStatus & ) {}
-    virtual void
-    on_sample_lost (
-      ::DDS::DataReader_ptr ,
-      const ::DDS::SampleLostStatus & ) {}
-    virtual void
-    on_offered_deadline_missed (
-      ::DDS::DataWriter_ptr ,
-      const ::DDS::OfferedDeadlineMissedStatus & ) {}
-    virtual void
-    on_offered_incompatible_qos (
-      ::DDS::DataWriter_ptr ,
-      const ::DDS::OfferedIncompatibleQosStatus & ) {}
-    virtual void
-    on_liveliness_lost (
-      ::DDS::DataWriter_ptr ,
-      const ::DDS::LivelinessLostStatus & ) {}
-    virtual void
-    on_publication_matched (
-      ::DDS::DataWriter_ptr ,
-      const ::DDS::PublicationMatchedStatus & ) {}
-    virtual void
-    on_data_on_readers (
-      ::DDS::Subscriber_ptr ) {}
+      virtual void
+      on_inconsistent_topic (
+        ::DDS::Topic_ptr,
+        const ::DDS::InconsistentTopicStatus & );
 
-    virtual void
-    on_reliable_reader_activity_changed (
-      ::DDS::DataWriter_ptr ,
-      const ::DDS::ReliableReaderActivityChangedStatus & ) {}
+      virtual void
+      on_requested_deadline_missed (
+        ::DDS::DataReader_ptr ,
+        const ::DDS::RequestedDeadlineMissedStatus & );
+
+      virtual void
+      on_requested_incompatible_qos (
+        ::DDS::DataReader_ptr ,
+        const ::DDS::RequestedIncompatibleQosStatus & );
+
+      virtual void
+      on_sample_rejected (
+        ::DDS::DataReader_ptr ,
+        const ::DDS::SampleRejectedStatus & );
+
+      virtual void
+      on_liveliness_changed (
+        ::DDS::DataReader_ptr ,
+        const ::DDS::LivelinessChangedStatus & );
+
+      virtual void
+      on_data_available (
+        ::DDS::DataReader_ptr );
+
+      virtual void
+      on_subscription_matched (
+        ::DDS::DataReader_ptr ,
+        const ::DDS::SubscriptionMatchedStatus & );
+
+      virtual void
+      on_sample_lost (
+        ::DDS::DataReader_ptr ,
+        const ::DDS::SampleLostStatus & );
+
+      virtual void
+      on_offered_deadline_missed (
+        ::DDS::DataWriter_ptr ,
+        const ::DDS::OfferedDeadlineMissedStatus & );
+
+      virtual void
+      on_offered_incompatible_qos (
+        ::DDS::DataWriter_ptr ,
+        const ::DDS::OfferedIncompatibleQosStatus & );
+
+      virtual void
+      on_liveliness_lost (
+        ::DDS::DataWriter_ptr ,
+        const ::DDS::LivelinessLostStatus & );
+
+      virtual void
+      on_publication_matched (
+        ::DDS::DataWriter_ptr ,
+        const ::DDS::PublicationMatchedStatus & );
+
+      virtual void
+      on_data_on_readers (
+        ::DDS::Subscriber_ptr );
+
+      virtual void
+      on_reliable_reader_activity_changed (
+        ::DDS::DataWriter_ptr ,
+        const ::DDS::ReliableReaderActivityChangedStatus & );
 
     private:
       ::CCM_DDS::ConnectorStatusListener_var error_listener_;
